file directory changes

--- a/train.ipynb
+++ b/train.ipynb
@@ -17,7 +17,7 @@
    "outputs": [],
    "source": [
     "filename = \"./training_data/yelp_labelled.txt\"\n",
-    "with open(filename, \"r\", encoding='utf-8') as infile, open('./positiveReviews.txt','w') as pf, open('./negativeReviews.txt','w') as nf:\n",
+    "with open(filename, \"r\", encoding='utf-8') as infile, open('./training_data/positiveReviews.txt','w') as pf, open('./training_data/negativeReviews.txt','w') as nf:\n",
     "    for line in infile:\n",
     "        data = line.rsplit(None,1)\n",
     "        class_label = int(data[-1])\n",
@@ -70,6 +70,48 @@
    "source": [
     "print(len(wordsList))\n",
     "print(wordVectors.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Positive Reviews counted\n",
+      "Negative Reviews counted\n",
+      "Total number of reviews:  1000\n",
+      "Total number of words:  10894\n",
+      "Average of words in reviews:  10.894\n"
+     ]
+    }
+   ],
+   "source": [
+    "positiveReviews = ['./training_data/positiveReviews.txt']\n",
+    "negativeReviews = ['./training_data/negativeReviews.txt']\n",
+    "\n",
+    "wordCount = []\n",
+    "for pr in positiveReviews:\n",
+    "    with open(pr, \"r\", encoding='utf-8') as f:\n",
+    "        for line in f:\n",
+    "            counter = len(line.split())\n",
+    "            wordCount.append(counter)\n",
+    "print('Positive Reviews counted')\n",
+    "\n",
+    "for nr in negativeReviews:\n",
+    "    with open(nr, \"r\", encoding='utf-8') as f:\n",
+    "        for line in f:\n",
+    "            counter = len(line.split())\n",
+    "            wordCount.append(counter)\n",
+    "print('Negative Reviews counted')\n",
+    "\n",
+    "numReviews = len(wordCount)\n",
+    "print('Total number of reviews: ', numReviews)\n",
+    "print('Total number of words: ', sum(wordCount))\n",
+    "print('Average of words in reviews: ', sum(wordCount)/numReviews)\n"
    ]
   },
   {
